--- a/lab01/env.yaml
+++ b/lab01/env.yaml
@@ -7,6 +7,7 @@ dependencies:
   - jupyterlab
   - jupyterlab_widgets
   - ipywidgets
+  - matplotlib
   - pip:
     - pytorch-lightning==2.2.0
     - smart-open==6.4.0
