--- a/lab04/env.yaml
+++ b/lab04/env.yaml
@@ -5,5 +5,8 @@ dependencies:
   - python=3.11.0
   - pip
   - pip:
+    - albumentations
+    - deepchecks
     - torch
+    - torchvision
     - pytest
