--- a/lab01/env.yaml
+++ b/lab01/env.yaml
@@ -9,9 +9,8 @@ dependencies:
   - ipywidgets
   - matplotlib
   - pip:
-#   - --extra-index-url https://download.pytorch.org/whl/cu118 # uncomment if you need CUDA 11.8
     - pytorch-lightning==2.2.0
     - smart-open==6.4.0
-    - torch==2.2.0
-    - torchvision
+    - torch==2.6.0
+    - torchvision==0.21.0
   # Add more dependencies as needed
