--- a/lab02/env.yaml
+++ b/lab02/env.yaml
@@ -8,7 +8,8 @@ dependencies:
   - streamlit
   - pip:
 #     - --extra-index-url https://download.pytorch.org/whl/cu118 # uncomment if you need CUDA 11.8
-      - matplotlib
-      - torch
-      - transformers
-      - wikipedia
+      - matplotlib==3.10.0
+      - torch==2.6.0
+      - transformers==4.48.1
+      - wikipedia==1.4.0
+      - streamlit==1.41.1
