--- a/lab04/env.yaml
+++ b/lab04/env.yaml
@@ -5,9 +5,9 @@ dependencies:
   - python=3.11.0
   - pip
   - pip:
-    - albumentations
-    - deepchecks
-    - torch
-    - torchvision
-    - pytest
-    - pytorch-ignite
+    - albumentations==2.0.2
+    - deepchecks==0.19.1
+    - torch==2.6.0
+    - torchvision==0.21.0
+    - pytest==8.3.4
+    - pytorch-ignite==0.5.1
