--- a/lab07/env.yaml
+++ b/lab07/env.yaml
@@ -4,12 +4,12 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - dvc
-  - jupyterlab
   - pip:
-    - mlserver
-    - mlserver-huggingface
-    - timm
-    - torch
-    - transformers
-    - foolbox
+    - mlserver==1.6.1
+    - mlserver-huggingface==1.6.1
+    - timm==1.0.14
+    - torch==2.6.0
+    - transformers==4.48.3
+    - foolbox==3.3.4
+    - dvc==3.59.0
+    - jupyterlab==4.3.5
