--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,8 @@ cython_debug/
 lab01/cifar_net.pth
 mlartifacts/
 mlruns/
+lab04/bin
+lab04/deepchecks_intro/hymenoptera*
+lab04/deepchecks_intro/report*
+lab04/deepchecks_intro/model.pth
+
